--- a/dragon-web/src/components/header/header.styles.scss
+++ b/dragon-web/src/components/header/header.styles.scss
@@ -1,9 +1,10 @@
 .logo {
-    height: 200%;
-    width: 200%;
+    height: 250%;
+    width: 250%;
     position: relative;
-    top: -45px;
-    right: -25px;
+    left: -35px;
+    
+    
 }
 .header {
     height: 70px;
@@ -13,9 +14,13 @@
     margin-bottom: 25px;
   
     .logo-container {
-      height: 100%;
-      width: 70px;
+      height: 50%;
+      width: 50px;
       padding: 25px;
+      position: relative;
+      right: -50px; 
+      top: -30px;
+      
     }
   
     .options {
@@ -27,6 +32,7 @@
   
       .option {
         padding: 10px 15px;
+        cursor: pointer;
       }
     }
   }
