arreglando errores con el logo

--- a/dragon-web/src/components/header/header.styles.scss
+++ b/dragon-web/src/components/header/header.styles.scss
@@ -1,8 +1,10 @@
 .logo {
-    height: 250%;
-    width: 250%;
+    height: 100px;
+    width: 100px;
     position: relative;
-    left: -35px;
+    left: -25px;
+    top: -25px;
+    
     
     
 }
@@ -14,12 +16,12 @@
     margin-bottom: 25px;
   
     .logo-container {
-      height: 50%;
+      height: 50px;
       width: 50px;
       padding: 25px;
       position: relative;
       right: -50px; 
-      top: -30px;
+      
       
     }
   
